--- a/env/docker-compose.dev.yml
+++ b/env/docker-compose.dev.yml
@@ -6,18 +6,17 @@ services:
   texter:
     build: .
     networks:
-      - rrn-net
+      - txt-net
     env_file:
       - .env
     ports:
       - "${HOST_PORT}:${CONT_PORT}"
     links:
       - txt_mongo
-      - ak_mysql
   txt_mongo:
     image: mongo:3.4
     networks:
-      - rrn-net
+      - txt-net
     command: mongod --port ${MONGO_CONT_PORT}
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
@@ -29,20 +28,7 @@ services:
       - "${MONGO_HOST_PORT}:${MONGO_CONT_PORT}"
     volumes: 
       - ./db/mongo:/docker-entrypoint-initdb.d/
-  ak_mysql:
-    image: mysql:5.6
-    networks:
-      - rrn-net
-    environment: 
-      - MYSQL_USER=${AK_USER}
-      - MYSQL_PASSWORD=${AK_PASS}
-      - MYSQL_DATABASE=${AK_DBNAME}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOTPW}
-    ports:
-      - "${MYSQL_HOST_PORT}:${MYSQL_CONT_PORT}"
-    volumes:
-      - ./db/ak:/docker-entrypoint-initdb.d/
 
 networks:
-  rrn-net:
+  txt-net:
     external: true
